--- a/src/scss/layout/_typography.scss
+++ b/src/scss/layout/_typography.scss
@@ -293,7 +293,7 @@ body {
 
     // Lists
     ul {
-      list-style: disc outside;
+      list-style-type: disc;
       padding-left: 1.375rem;
 
       li {
