--- a/src/scss/site.scss
+++ b/src/scss/site.scss
@@ -17,6 +17,7 @@
 @import 'layout/site-header';
 @import 'layout/site-footer';
 @import 'layout/forms';
+@import 'layout/tables';
 
 // Navigation
 @import 'navigation/nav-core';
