--- a/src/scss/views/_blog.scss
+++ b/src/scss/views/_blog.scss
@@ -73,32 +73,8 @@ body {
     }
   }
 
-  // Tables, codes and pres
-  table {
-    border-spacing: 0;
-    border-collapse: collapse;
-  }
+  //codes and pres
 
-  td,
-  th {
-    padding: 0;
-    font-family: $font-base;
-    height: 3rem;
-    padding: 1rem;
-
-    @media (max-width: 600px) {
-      @include stack();
-      display: inline-block;
-      height: auto;
-      padding: 10px 0;
-      text-align: center;
-    }
-  }
-
-  // Table heading cells
-  th {
-    font-weight: 700;
-  }
 
   abbr[title] {
     border-bottom: 1px dotted;
