--- a/src/scss/base/_config.scss
+++ b/src/scss/base/_config.scss
@@ -6,7 +6,7 @@
 // --------------------------------------------------------------
 
 // Colors
-$color-links: #0e9e58;
+$color-links: darken(#0e9e58, 5%);
 $color-hover: #606c76;
 $color-body: #333;
 $color-headings: #222;
