--- a/src/scss/views/_page.scss
+++ b/src/scss/views/_page.scss
@@ -5,10 +5,8 @@
 // particular layout.
 // ------------------------------------------------
 
-.slide {
-  &.slide-page {
-    @media(min-width: $container-mobile) {
-      min-height: 300px;
-    }
+.block.block-page {
+  @media(min-width: $container-mobile) {
+    min-height: 300px;
   }
 }
