--- a/src/scss/base/_accessibility.scss
+++ b/src/scss/base/_accessibility.scss
@@ -2,8 +2,13 @@
 // Accessibility
 //
 // A hidden screen reader for readers, focus elements for
-// vision imppanaceaed and other useful a11y CSS hacks.
+// vision impaired and other useful a11y CSS hacks.
 // ---------------------------------------------------------
+
+// Variables
+$focus-background-color: #f9bf47;
+$focus-outline-color: #f9bf47;
+$focus-text-color: #000;
 
 // Text meant only for screen readers.
 .screen-reader-text {
@@ -24,13 +29,13 @@
 
   &:focus {
     background-color: #f1f1f1;
-    border-radius: 3px;
+    border-radius: 0;
     box-shadow: 0 0 2px 2px rgba(#000, .6);
     clip: auto !important;
     clip-path: none;
     color: #21759b;
     display: block;
-    font-size: .875rem;
+    font-size: 1.7rem;
     font-weight: bold;
     height: auto;
     left: 5px;
@@ -48,12 +53,33 @@
   outline: 0;
 }
 
-// Override focus outline only where needed
-input,
-button,
-select,
-textarea {
-  &:focus {
-    outline: thin solid $color_links;
+// Suppress focus ring on for mouse users for visual reasons
+[data-whatinput="mouse"] *:focus {
+  outline: none;
+}
+
+// Visually distinct focus color on keyboard
+[data-whatinput="keyboard"] {
+  body {
+    input,
+    button,
+    select,
+    textarea {
+      &:focus {
+        outline: 4px solid $focus-outline-color;
+        opacity: 1;
+      }
+    }
+
+    #nav ul li a:focus {
+      background: $focus-background-color;
+      color: $focus-text-color;
+    }
+
+    a:focus {
+      outline: 2px solid $focus-outline-color;
+      background: $focus-background-color;
+      opacity: 1;
+    }
   }
 }
