--- a/src/scss/navigation/_nav-desktop.scss
+++ b/src/scss/navigation/_nav-desktop.scss
@@ -4,38 +4,131 @@
 // The main layout for the website navigation, for a desktop
 // devices only.
 // -----------------------------------------------------------
+$color-nav-dropdown-links: #333;
 $color-nav-links: #fff;
 $color-nav-dropdown-links: #333;
+$dropdown-width: 22rem;
 $icon-arrow-right: '../img/chevron-right-dark.svg';
 $icon-arrow-down: '../img/chevron-down.svg';
 $icon-arrow-left: '../img/chevron-left-dark.svg';
 
-@media (min-width: $responsivenav) {
+@media only screen and (min-width: $responsivenav) {
+
+  // Enable hovers
+  #nav ul li:hover > ul {
+    display: block;
+  }
+
+  // Make sure mobile nav-toggle is hidden on desktop
+  #nav-toggle {
+    display: none;
+  }
+
+  // Start navigation
   #nav {
-    // Set based on logo height, for example panacea logo is about 62px
+    // Set based on logo height, for example air logo is about 62px
     // menu links height are 12px, so paddings are (60/2)-12:
     padding-top: 1.7rem;
     padding-bottom: 1.7rem;
     float: right;
 
-    .menu-items {
+    ul.menu-items {
       margin: 0;
       padding: 0;
       background: transparent;
+      position: relative;
+      float: left;
+
+      // General menu items
+      li {
+        position: relative;
+        float: left;
+        margin: 0;
+
+        // Current parent menu item
+        &.current_page_item {
+          > a {
+            text-decoration: underline;
+          }
+        }
+
+        // Prevent nav from flickering
+        &.menu-item-has-children {
+          margin-right: .8rem;
+
+          > a {
+            // Let's make space for the nav-toggle/arrow
+            padding-right: 1.5rem;
+            margin-bottom: .8rem;
+          }
+        }
+
+        // Active menu item
+        a {
+          &:hover,
+          &:focus,
+          &:active,
+          &.highlighted,
+          &.current {
+            color: $color-nav-links;
+          }
+        }
+      }
 
       // Dropdowns
       ul {
         position: absolute;
-        padding: 0;
         background: #fff;
+        margin-left: 0;
+        padding-bottom: .5rem;
+        padding-top: .5rem;
+        margin-top: 18px;
+        z-index: 999;
 
         &.sub-menu {
           padding-top: .5rem;
           padding-bottom: .5rem;
+
+          li {
+            margin: 0;
+          }
+        }
+
+        .dropdown-toggle {
+          position: absolute;
+          right: 1rem;
+          top: .4rem;
+          border: 0;
         }
 
         li {
-          width: 100%;
+          float: none;
+          width: $dropdown-width;
+          padding: 0;
+
+          // Sub-level toggle arrow
+          button.dropdown-toggle {
+            position: absolute;
+            right: 8px;
+            top: 50%;
+            margin-top: 0;
+            padding: 0;
+            text-indent: -9999px;
+            overflow: hidden;
+            background-color: transparent;
+            background-image: url($icon-arrow-right);
+            background-repeat: no-repeat;
+            background-position: center;
+            color: transparent;
+            width: 12px;
+            height: 12px;
+            border: 0;
+
+            // Toggled state
+            &.toggled-on {
+              background-image: url($icon-arrow-left);
+            }
+          }
 
           // Prevent nav from flickering
           &.menu-item-has-children {
@@ -50,14 +143,17 @@ $icon-arrow-left: '../img/chevron-left-dark.svg';
         }
 
         ul {
-          // Fix weird sub-level alignment bug if no borders set
-          transform: translateY(.3rem);
+          top: 0;
+          left: 100%;
+          margin-left: 0;
+          margin-top: -5px;
         }
 
         a {
           padding: .8rem 1.5rem;
           font-size: 1.4rem;
           color: $color-nav-dropdown-links;
+          display: block;
 
           &:hover,
           &:focus,
@@ -70,110 +166,41 @@ $icon-arrow-left: '../img/chevron-left-dark.svg';
             background: #fff;
             color: #ccc;
           }
-
-          span.sub-arrow {
-            position: absolute;
-            right: 8px;
-            top: 50%;
-            margin-top: 0;
-            text-indent: -9999px;
-            overflow: hidden;
-            background-image: url($icon-arrow-right);
-            background-repeat: no-repeat;
-            background-position: center;
-            color: transparent;
-            width: 12px;
-            height: 12px;
-          }
         }
-      }
-
-      li {
-        float: left;
-
-        // Current and hover styles
-        // &.current_page_item {
-        //   a {
-        //     color: $color-links;
-        //   }
-        // }
-
-        // Prevent nav from flickering
-        &.menu-item-has-children {
-          margin-right: .8rem;
-
-          > a {
-            // Let's make space for the arrow
-            padding-right: 1.5rem;
-            margin-bottom: .8rem;
-          }
-        }
-
-        // a {
-        //   &:hover,
-        //   &:focus,
-        //   &:active,
-        //   &.highlighted,
-        //   &.current {
-        //     color: $color-links;
-        //   }
-        // }
-      }
-
-      &.sm-rtl li {
-        float: right;
-      }
-
-      ul li,
-      &.sm-rtl ul li,
-      &.sm-vertical li {
-        float: none;
       }
 
       // Main level
       a {
-        white-space: nowrap;
         color: $color-nav-links;
         font-size: 15px;
-        padding: 12px;
+        padding: 20px 12px;
 
         &.disabled {
           color: #bbb;
         }
-
-        span.sub-arrow {
-          @include vertical-align();
-          text-indent: -9999px;
-          overflow: hidden;
-          margin-top: 0;
-          margin-right: 0;
-          right: 0;
-          background-image: url($icon-arrow-down);
-          background-repeat: no-repeat;
-          background-position: center;
-          color: transparent;
-          position: absolute;
-          height: 8px;
-          width: 8px;
-        }
-
-        &.highlighted span.sub-arrow:before {
-          display: none;
-        }
       }
 
-      ul a,
-      &.sm-vertical a {
-        white-space: normal;
+      // Main level toggle arrow
+      button.dropdown-toggle {
+        @include vertical-align();
+        text-indent: -9999px;
+        overflow: hidden;
+        margin-top: 0;
+        margin-right: 0;
+        right: 0;
+        background-color: transparent;
+        padding: 0;
+        background-image: url($icon-arrow-down);
+        background-repeat: no-repeat;
+        background-position: center;
+        color: transparent;
+        position: absolute;
+        height: 8px;
+        width: 8px;
+        border: 0;
       }
 
-      .sm-nowrap > li {
-        > a,
-        :not(ul) a {
-          white-space: nowrap;
-        }
-      }
-
+      // Bubble arrow
       > li > ul {
         &:after {
           content: '';
