--- a/src/scss/navigation/_nav-mobile.scss
+++ b/src/scss/navigation/_nav-mobile.scss
@@ -8,8 +8,8 @@ $nav-toggle-color: #fff;
 $nav-toggle-active-color: #fff;
 $hamburger-padding-x: 1.5rem;
 $hamburger-padding-y: 5rem;
-$hamburger-layer-width: 3rem;
-$hamburger-layer-height: .3rem;
+$hamburger-layer-width: 4rem;
+$hamburger-layer-height: .4rem;
 $hamburger-layer-spacing: .6rem;
 $hamburger-layer-color: $nav-toggle-color;
 $hamburger-layer-border-radius: .4rem;
@@ -28,6 +28,11 @@ $hamburger-hover-transition-timing-function: linear;
 
 // Mobile styles
 @media screen and (max-width: $responsivenav - 1px) {
+
+  // Disable scroll on html body when menu is opened.
+  .disable-scroll {
+    overflow: hidden;
+  }
 
   // Ensure nav stays in the same position when activated
   body {
@@ -80,6 +85,7 @@ $hamburger-hover-transition-timing-function: linear;
         text-decoration: none;
         position: relative;
         z-index: 0;
+        display: block;
 
         // We have color here, so it's okay to remove outline
         outline: none;
@@ -108,27 +114,44 @@ $hamburger-hover-transition-timing-function: linear;
           color: #bbb;
         }
 
-        span.sub-arrow {
-          position: absolute;
-          top: 0;
-          margin-top: 0;
-          left: auto;
-          right: 2rem;
-          width: 3.7rem;
-          height: 3.7rem;
-          overflow: hidden;
-          font: bold 18px/37px monospace !important;
-          text-align: center;
-          background: #202020;
-          color: #fff;
+        &.highlighted span.sub-arrow:before {
+          display: block;
+          content: '-';
+        }
+      }
 
-          &:hover {
-            background-color: #3e4853;
-            color: #fff;
-          }
+      // Dropdown toggle
+      button.dropdown-toggle {
+        position: absolute;
+        top: 0;
+        margin-top: 0;
+        left: auto;
+        right: 2rem;
+        width: 3.7rem;
+        height: 3.7rem;
+        overflow: hidden;
+        font: bold 18px/37px monospace !important;
+        text-align: center;
+        background: #202020;
+        color: #fff;
+        padding: 0;
+        z-index: 9999;
+        border: 0;
+
+        &:focus {
+          z-index: 10000;
         }
 
-        &.highlighted span.sub-arrow:before {
+        &:before {
+          content: '+';
+        }
+
+        &:hover {
+          background-color: #3e4853;
+          color: #fff;
+        }
+
+        &.toggled-on:before {
           display: block;
           content: '-';
         }
@@ -237,6 +260,19 @@ $hamburger-hover-transition-timing-function: linear;
   // Separate active colors for opened state
   &.is-active {
     color: $nav-toggle-active-color;
+
+    &:focus,
+    &.focus {
+      .hamburger-box {
+        .hamburger-inner {
+          background-color: $color-links;
+
+          &:after {
+            background-color: $color-links;
+          }
+        }
+      }
+    }
 
     .hamburger-box {
       .hamburger-inner {
