--- a/src/scss/layout/_site-header.scss
+++ b/src/scss/layout/_site-header.scss
@@ -7,7 +7,7 @@
 
 // Fix overlapping in some mobile devices
 .site-header {
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
@@ -15,6 +15,7 @@
 
   @media (min-width: $responsivenav) {
     padding-top: 20px;
+    position: fixed;
   }
 
   .container {
